--- a/win32/DSGame-server/DSGame-server.vcxproj.filters
+++ b/win32/DSGame-server/DSGame-server.vcxproj.filters
@@ -78,8 +78,8 @@
     <Filter Include="Header Files\utils">
       <UniqueIdentifier>{4809b9f1-e6f6-4976-a83b-e246e6dc5671}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\marshal">
-      <UniqueIdentifier>{f4feca65-7602-491a-9a5a-ef9bf50cda29}</UniqueIdentifier>
+    <Filter Include="Header Files\common\marshal">
+      <UniqueIdentifier>{e12005cb-3c26-42a1-9752-8898f7492816}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -827,8 +827,8 @@
     <ClInclude Include="..\..\src\map\guild.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\src\map\marshal\string.hpp">
-      <Filter>Header Files\marshal</Filter>
+    <ClInclude Include="..\..\src\common\marshal\string.h">
+      <Filter>Header Files\common\marshal</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
