--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: cpp
 
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq luajit-5.1-dev
+
 before_script:
   - sh autogen.sh
-
