--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: cpp
 
 before_install:
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - sudo apt-get update -qq
-  - sudo apt-get install -qq luajit-5.1-dev libzmq3-dev libmysqlclient-dev
+  - sudo apt-get install -qq luajit-5.1-dev libzmq3-dev libmysqlclient-dev g++-4.8
 
 before_script:
   - sh autogen.sh
