--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,11 @@ language: cpp
 before_install:
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - sudo apt-get update -qq
-  - sudo apt-get install -qq luajit-5.1-dev libzmq3-dev libmysqlclient-dev g++-4.8
 
+install:
+  - sudo apt-get install -qq luajit-5.1-dev libzmq3-dev libmysqlclient-dev g++-4.8
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
+  
 before_script:
   - sh autogen.sh
   - mysql -e 'create database myapp_test;'
