PROJECT: force apt to get the zmq dev headers

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: cpp
 
 before_install:
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo rm /etc/apt/sources.list.d/travis_ci_zeromq3-source.list
   - sudo apt-get update -qq
 
 install:
