Update travis tests to indicate sql failures
Return code wasn't being set properly

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
 
 before_script:
   - sh autogen.sh
-  - mysql -u root -e 'create database myapp_test;'
+  - mysql -u root -e 'create database dspdb_test;'
 
 script:
   - ./configure
