--- a/conf/server_message.conf
+++ b/conf/server_message.conf
@@ -1,3 +1,1 @@
-Please visit http://forums.dspt.info/ for the latest information on the project. 
-Also, do not hesitate to join us on IRC network Rizon #darkstarproject 
-Thank you.
+The September Version Update has arrived.  Learn more at http://ffxi-cleopatra.boards.net/thread/68/september-11th-2015-version-update.
